Correct missing border

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -56,7 +56,7 @@ hr {
 #about {
     width: 90%;
     height: 18.75em;
-    border: .1875 solid green;
+    border: .1875em solid green;
     padding: 7.8125em;
     margin: 3.75em 5em;
     border-radius: .9375em;
